# hn-herald

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  SETUP_CSS.md  THEMES.md  package-lock.json  package.json  product.md  pyproject.toml  railway.toml  render.yaml  start.sh  tailwind.config.js  tasks.md
.agentic/: config.yml
.agentic-framework/workflows/: playwright-e2e.md
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: code_style.md  codebase_structure.md  mvp1_completion.md  project_overview.md  suggested_commands.md  task_completion.md
docs/: architecture.md  codebase-summary.md  e2e-tests.md  product.md
docs/adr/: 001-langgraph-pipeline-architecture.md  002-sse-streaming-over-htmx.md  003-privacy-first-architecture.md  004-tag-based-relevance-scoring.md  005-claude-haiku-for-summarization.md  README.md
docs/design/: 01-hn-api-client.md  02-article-extraction.md  03-llm-summarization.md  04-relevance-scoring.md  05-fastapi-endpoints.md  05a-langgraph-pipeline.md  05b-fastapi-layer.md  06-htmx-templates.md  07-rate-limiting.md  article-extraction.md  llm-summarization.md
docs/implementation/: phase3-display-components.md
docs/setup/: tailwind-css-setup.md
src/hn_herald/: __init__.py  config.py  main.py  rate_limit.py
src/hn_herald/api/: __init__.py  mocks.py  routes.py
src/hn_herald/callbacks/: __init__.py
src/hn_herald/graph/: __init__.py  exceptions.py  graph.py  state.py
src/hn_herald/graph/nodes/: __init__.py  fetch_article.py  fetch_hn.py  filter.py  format.py  rank.py  score.py  summarize.py
src/hn_herald/models/: __init__.py  article.py  digest.py  profile.py  scoring.py  story.py  summary.py
src/hn_herald/services/: __init__.py  hn_client.py  llm.py  loader.py  scoring.py
src/hn_herald/static/css/: input.css  styles.css
src/hn_herald/static/js/: app.js
src/hn_herald/templates/: base.html  index.html
src/hn_herald/templates/partials/: article_card.html  digest_form.html  digest_results.html  error.html  loading.html  tag_selector.html
tests/: __init__.py  conftest.py  test_api.py  test_rate_limit.py
tests/e2e/: __init__.py  test_article_extraction_e2e.py
tests/integration/: __init__.py  test_llm_integration.py
tests/integration/api/: test_routes.py
tests/integration/graph/: test_graph_integration.py  test_partial_failures.py
tests/test_models/: __init__.py  test_article.py  test_profile.py  test_scoring.py  test_story.py
tests/test_services/: __init__.py  test_hn_client.py  test_loader.py  test_scoring.py
tests/unit/graph/nodes/: test_fetch_article.py  test_fetch_hn.py  test_filter.py  test_format.py  test_rank.py  test_score.py  test_summarize.py
