[project]
name = "hn-herald"
version = "0.1.0"
description = "Privacy-first, personalized HackerNews digest with AI summarization"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Abhishek" }
]
keywords = [
    "hackernews",
    "ai",
    "summarization",
    "langchain",
    "langgraph",
    "fastapi",
    "htmx",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Typing :: Typed",
]

dependencies = [
    # Web Framework
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "jinja2>=3.1.0,<4.0.0",

    # Data Validation & Settings
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",

    # HTTP Client
    "httpx>=0.27.0,<1.0.0",

    # HTML Parsing
    "beautifulsoup4>=4.12.0,<5.0.0",
    "lxml>=5.0.0,<6.0.0",

    # LangChain Ecosystem
    "langgraph>=0.2.0,<1.0.0",
    "langchain-anthropic>=0.1.0,<1.0.0",
    "langchain-community>=0.2.0,<1.0.0",
    "langchain>=0.2.0,<1.0.0",

    # SSE for streaming responses
    "sse-starlette>=2.0.0,<3.0.0",

    # Retry logic
    "tenacity>=8.2.0,<10.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=4.1.0,<6.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-httpx>=0.30.0,<1.0.0",
    "respx>=0.21.0,<1.0.0",

    # Linting & Formatting
    "ruff>=0.3.0,<1.0.0",

    # Type Checking
    "mypy>=1.8.0,<2.0.0",

    # Development utilities
    "pre-commit>=3.6.0,<4.0.0",
    "watchfiles>=0.21.0,<1.0.0",
]

langsmith = [
    "langsmith>=0.1.0,<1.0.0",
]

all = [
    "hn-herald[dev,langsmith]",
]

[project.scripts]
hn-herald = "hn_herald.main:cli"

[project.urls]
Homepage = "https://github.com/darth-dodo/ai-adventures"
Repository = "https://github.com/darth-dodo/ai-adventures"
Documentation = "https://github.com/darth-dodo/ai-adventures/tree/main/hn-herald/docs"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hn_herald"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
]

# =============================================================================
# Ruff Configuration
# =============================================================================
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "N",      # pep8-naming
    "D",      # pydocstring
    "ANN",    # flake8-annotations
    "T20",    # flake8-print
    "Q",      # flake8-quotes
    "RET",    # flake8-return
    "FBT",    # flake8-boolean-trap
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "DTZ",    # flake8-datetimez
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "RSE",    # flake8-raise
    "SLOT",   # flake8-slots
    "TID",    # flake8-tidy-imports
]
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D106",   # Missing docstring in public nested class
    "D203",   # 1 blank line required before class docstring (conflicts with D211)
    "D213",   # Multi-line docstring summary should start at the second line (conflicts with D212)
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "COM812", # Trailing comma missing (conflicts with formatter)
    "ISC001", # Implicit string concatenation (conflicts with formatter)
    "S101",   # Use of assert detected (needed for tests)
    "S104",   # Possible binding to all interfaces (intentional for Docker)
    "PLR0913", # Too many arguments to function call
    "PLC0415", # Import should be at top level (needed for test fixtures)
    "D107",   # Missing docstring in __init__
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # Use of assert is fine in tests
    "D",      # Don't require docstrings in tests
    "ANN",    # Don't require type annotations in tests
    "ARG",    # Unused arguments are fine in tests (fixtures)
    "PLR2004", # Magic values are fine in tests
]
"src/hn_herald/main.py" = [
    "T201",   # Allow print statements in CLI entry point
]

[tool.ruff.lint.isort]
known-first-party = ["hn_herald"]
force-single-line = false
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-none-returning = true

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Form",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 80

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["src/hn_herald"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
fail_under = 70
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

# =============================================================================
# MyPy Configuration
# =============================================================================
[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_equality = true
extra_checks = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langchain_anthropic.*",
    "langchain_community.*",
    "langgraph.*",
    "bs4.*",
    "lxml.*",
    "sse_starlette.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
